[gd_scene load_steps=4 format=3 uid="uid://ckp78apqak5mr"]

[ext_resource type="Texture2D" uid="uid://dujoyv2fb471r" path="res://assets/ui/button_mockup.png" id="1_ihqoc"]
[ext_resource type="Script" uid="uid://b0d1t06cdxrn1" path="res://scenes/ui/shops/shops.gd" id="1_v65ak"]
[ext_resource type="Texture2D" uid="uid://k4g86uqyycw0" path="res://objects/items/ball/ball2.png" id="2_v65ak"]

[node name="Shops" type="CanvasLayer" node_paths=PackedStringArray("options")]
layer = 2
script = ExtResource("1_v65ak")
options = NodePath("Options")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 654.0
offset_bottom = 370.0

[node name="Items" type="VBoxContainer" parent="."]
offset_left = 208.0
offset_top = 5.0
offset_right = 528.0
offset_bottom = 357.0

[node name="Slot0" type="NinePatchRect" parent="Items"]
custom_minimum_size = Vector2(320, 55)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="Items/Slot0"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.01875
anchor_top = 0.55992585
anchor_right = -0.01875
anchor_bottom = 0.55992585
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("2_v65ak")
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="Items/Slot0"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"
metadata/_edit_use_anchors_ = true

[node name="QuantityLabel" type="Label" parent="Items/Slot0"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"
metadata/_edit_use_anchors_ = true

[node name="DescriptionLabel" type="Label" parent="Items/Slot0"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003125
anchor_top = -0.11020407
anchor_right = -0.003125
anchor_bottom = -0.11020411
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Slot1" type="NinePatchRect" parent="Items"]
custom_minimum_size = Vector2(320, 55)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="Items/Slot1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.01875
anchor_top = 0.55992585
anchor_right = -0.01875
anchor_bottom = 0.55992585
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("2_v65ak")
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="Items/Slot1"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"
metadata/_edit_use_anchors_ = true

[node name="QuantityLabel" type="Label" parent="Items/Slot1"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"
metadata/_edit_use_anchors_ = true

[node name="DescriptionLabel" type="Label" parent="Items/Slot1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003125
anchor_top = -0.11020407
anchor_right = -0.003125
anchor_bottom = -0.11020411
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Slot2" type="NinePatchRect" parent="Items"]
custom_minimum_size = Vector2(320, 55)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="Items/Slot2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.01875
anchor_top = 0.55992585
anchor_right = -0.01875
anchor_bottom = 0.55992585
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("2_v65ak")
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="Items/Slot2"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"
metadata/_edit_use_anchors_ = true

[node name="QuantityLabel" type="Label" parent="Items/Slot2"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"
metadata/_edit_use_anchors_ = true

[node name="DescriptionLabel" type="Label" parent="Items/Slot2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003125
anchor_top = -0.11020407
anchor_right = -0.003125
anchor_bottom = -0.11020411
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Slot3" type="NinePatchRect" parent="Items"]
custom_minimum_size = Vector2(320, 55)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="Items/Slot3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.01875
anchor_top = 0.55992585
anchor_right = -0.01875
anchor_bottom = 0.55992585
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("2_v65ak")
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="Items/Slot3"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"
metadata/_edit_use_anchors_ = true

[node name="QuantityLabel" type="Label" parent="Items/Slot3"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"
metadata/_edit_use_anchors_ = true

[node name="DescriptionLabel" type="Label" parent="Items/Slot3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003125
anchor_top = -0.11020407
anchor_right = -0.003125
anchor_bottom = -0.11020411
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Slot4" type="NinePatchRect" parent="Items"]
custom_minimum_size = Vector2(320, 55)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="Items/Slot4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.01875
anchor_top = 0.55992585
anchor_right = -0.01875
anchor_bottom = 0.55992585
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("2_v65ak")
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="Items/Slot4"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"
metadata/_edit_use_anchors_ = true

[node name="QuantityLabel" type="Label" parent="Items/Slot4"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"
metadata/_edit_use_anchors_ = true

[node name="DescriptionLabel" type="Label" parent="Items/Slot4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003125
anchor_top = -0.11020407
anchor_right = -0.003125
anchor_bottom = -0.11020411
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Slot5" type="NinePatchRect" parent="Items"]
custom_minimum_size = Vector2(320, 55)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Icon" type="TextureRect" parent="Items/Slot5"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.01875
anchor_top = 0.55992585
anchor_right = -0.01875
anchor_bottom = 0.55992585
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("2_v65ak")
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="Items/Slot5"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"
metadata/_edit_use_anchors_ = true

[node name="QuantityLabel" type="Label" parent="Items/Slot5"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"
metadata/_edit_use_anchors_ = true

[node name="DescriptionLabel" type="Label" parent="Items/Slot5"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003125
anchor_top = -0.11020407
anchor_right = -0.003125
anchor_bottom = -0.11020411
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Money" type="NinePatchRect" parent="."]
offset_left = 532.0
offset_top = 5.0
offset_right = 638.0
offset_bottom = 49.0
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="Money"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -22.0
offset_right = 33.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "$ 999999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopPane" type="NinePatchRect" parent="."]
offset_left = 4.0
offset_top = 5.0
offset_right = 204.0
offset_bottom = 355.0
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Options" type="VBoxContainer" parent="."]
offset_left = 552.0
offset_top = 236.0
offset_right = 612.0
offset_bottom = 349.0

[node name="Slot0" type="NinePatchRect" parent="Options"]
custom_minimum_size = Vector2(60, 35)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Options/Slot0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -13.000008
offset_right = 32.0
offset_bottom = 13.000008
grow_horizontal = 2
grow_vertical = 2
text = "Buy"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot1" type="NinePatchRect" parent="Options"]
custom_minimum_size = Vector2(60, 35)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Options/Slot1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -13.000008
offset_right = 32.0
offset_bottom = 13.000008
grow_horizontal = 2
grow_vertical = 2
text = "Sell"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot2" type="NinePatchRect" parent="Options"]
custom_minimum_size = Vector2(60, 35)
layout_mode = 2
texture = ExtResource("1_ihqoc")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Options/Slot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -13.000008
offset_right = 32.0
offset_bottom = 13.000008
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
